# lasertag

./: .eslintrc.js  .gitignore  .travis.yml  README.md  index.html  package.json  pyproject.toml  pytest.ini  robot_interface.py  robot_webserver.py  test_robot_webserver.py  tsconfig.json
ansible/: inventory  provision_bot.yml
ansible/templates/: nginx_default_site.j2  supervisor_server.conf.j2
scss/: controller.scss
src/html/: controller.html
ts/: controller.ts  geometry.ts  test_geometry.ts
