[tool.poetry]
name = "lasertag"
version = "0.1.0"
description = "Raspberry Pi based Laser Tag Robot"
authors = ["Ian Glover <ian.glover@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = ">3.7"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
ansible = "^2.9.3"
jinja2 = "^2.10.3"
pyyaml = "^5.3"
pytest = "^5.3.5"
pytest-aiohttp = "^0.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
